Added firefox lexer, testing normal one.

--- a/src/prototype.xhtml
+++ b/src/prototype.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8" />
-		<script type="text/javascript" src="core/object.js"></script>
+		<script type="text/javascript" src="parser/firefox.js"></script>
 		<script type="text/javascript">
 		<![CDATA[
 
