--- a/src/jlayout-borderlayout-resize.html
+++ b/src/jlayout-borderlayout-resize.html
@@ -4,7 +4,9 @@
 	<head>
 		<title>Resizing Border Layout example</title>
 		<meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8" />
+		<link type="text/css" href="../lib/jquery-ui-1.7.1.custom.css" rel="stylesheet" />
 		<script type="text/javascript" src="../lib/jquery-1.3.2.js"></script>
+		<script type="text/javascript" src="../lib/jquery-ui-1.7.1.custom.min.js"></script>
 		<script type="text/javascript" src="../lib/jquery.metadata.js"></script>
 		<script type="text/javascript" src="jsizes/jquery.sizes.js"></script>
 		<script type="text/javascript" src="jlayout/jlayout.js"></script>
@@ -20,6 +22,26 @@
 				relayout();
 
 				$(window).resize(relayout);
+
+				$('.north').resizable({
+					handles: 's',
+					stop: relayout
+				});
+
+				$('.south').resizable({
+					handles: 'n',
+					stop: relayout
+				});
+
+				$('.east').resizable({
+					handles: 'w',
+					stop: relayout
+				});
+
+				$('.west').resizable({
+					handles: 'e',
+					stop: relayout
+				});
 			});
 		</script>
 		<style>
@@ -50,7 +72,7 @@
 		</style>
 	</head>
 	<body>
-		<div class="layout {layout: {type: 'border', hgap: 3, vgap: 3}}">
+		<div class="layout {layout: {type: 'border', hgap: 0, vgap: 0}}">
 			<div class="center">
 				Center
 			</div>
