--- a/src/column-selectors-1.3.html
+++ b/src/column-selectors-1.3.html
@@ -1,25 +1,44 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
-  PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 	<head>
 		<title>My Test Page</title>
-		<meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<script type="text/javascript" src="../lib/jquery-1.3.2.js"></script>
+		<script type="text/javascript" src="table/jquery.column.js"></script>
 		<script type="text/javascript">
-	
+	<!--
 			$(document).ready(function () {
-				console.log($('ul li'));
-/*
+
 				var cells = $('th').width(50).height(25).css({textAlign: 'left'});
 
 				cells.each(function () {
 					$(this).text(this.cellIndex);
 				});
-				console.log(cells);
-*/
+			
+					
+				$.each($('#t1 th:nth-col(odd)'), function(i) {
+					$(this).css({backgroundColor: 'yellow'});
+				});
+
+				$.each($('#t2 th:nth-col(2)'), function(i) {
+					$(this).css({backgroundColor: 'yellow'});
+				});
+
+				$.each($('#t3 th:nth-col(even)'), function (i) {
+					$(this).css({backgroundColor: 'yellow'});
+				});
+
+				$.each($('#t4 th:nth-col(1)'), function (i) {
+					$(this).css({backgroundColor: 'yellow'});
+				});
+
+
+				//$('#t4 th:nth-col(2)');
+				//console.log($('#t3 tr th:nth-child(2n+1)'));
+				//$('#t4 th:nth-child(2)').css({backgroundColor: 'pink'});
+				//$('table th:nth-col(2)').css({backgroundColor: 'pink'});
 			});
-	
+	-->
 		</script>
 	</head>
 	<body>
@@ -33,36 +52,36 @@
 			</colgroup>
 			<thead>
 				<tr>
-					<th rowspan="2">&nbsp;</th>
+					<th rowspan="2"> </th>
 
-					<th>&nbsp;</th>
-					<th colspan="2">&nbsp;</th>
-					<th>&nbsp;</th>
+					<th> </th>
+					<th colspan="2"> </th>
+					<th> </th>
 				</tr>
 				<tr>
-					<th colspan="2">&nbsp;</th>
-					<th rowspan="3">&nbsp;</th>
-					<th>&nbsp;</th>
+					<th colspan="2"> </th>
+					<th rowspan="3"> </th>
+					<th> </th>
 
 				</tr>
 				<tr>
-					<th colspan="2">&nbsp;</th>
-					<th>&nbsp;</th>
-					<th>&nbsp;</th>
+					<th colspan="2"> </th>
+					<th> </th>
+					<th> </th>
 				</tr>
 				<tr>
-					<th>&nbsp;</th>
-					<th>&nbsp;</th>
+					<th> </th>
+					<th> </th>
 
-					<th>&nbsp;</th>
-					<th>&nbsp;</th>
+					<th> </th>
+					<th> </th>
 				</tr>
 				<tr>
-					<th>&nbsp;</th>
-					<th>&nbsp;</th>
-					<th>&nbsp;</th>
-					<th>&nbsp;</th>
-					<th>&nbsp;</th>
+					<th> </th>
+					<th> </th>
+					<th> </th>
+					<th> </th>
+					<th> </th>
 				</tr>
 			</thead>
 			<tbody>
@@ -174,6 +193,21 @@
 					<td></td>
 				</tr>
 			</tbody>
+		</table>
+
+		<table id="t5" border="1">
+			<tr>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+			</tr>
+		</table>
+
+		<table id="t6" border="1">
+			<td></td>
 		</table>
 	</body>
 </html>
