--- a/src/column-selectors-1.3.html
+++ b/src/column-selectors-1.3.html
@@ -1,42 +1,32 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>My Test Page</title>
+		<title>Column selector example</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<script type="text/javascript" src="../lib/jquery-1.3.2.js"></script>
 		<script type="text/javascript" src="table/jquery.column.js"></script>
 		<script type="text/javascript">
-	<!--
+		<!--
 			$(document).ready(function () {
 
-				var cells = $('th').width(50).height(25).css({textAlign: 'left'});
+				var cells = $('th, td').width(50).height(25).css({textAlign: 'left'});
 
 				cells.each(function () {
 					$(this).text(this.cellIndex);
 				});
 			
 					
-				$.each($('#t1 th:nth-col(odd)'), function(i) {
-					$(this).css({backgroundColor: 'yellow'});
-				});
+				$('#t1 th:nth-col(odd)').css({backgroundColor: 'yellow'});
 
-				$.each($('#t2 th:nth-col(2)'), function(i) {
-					$(this).css({backgroundColor: 'yellow'});
-				});
+				$('#t2 th:nth-col(2)').css({backgroundColor: 'yellow'});
 
-				$.each($('#t3 th:nth-col(even)'), function (i) {
-					$(this).css({backgroundColor: 'yellow'});
-				});
+				$('#t3 th:nth-col(even)').css({backgroundColor: 'yellow'});
 
-				$.each($('#t4 th:nth-col(1)'), function (i) {
-					$(this).css({backgroundColor: 'yellow'});
-				});
+				$('#t4 th:nth-col(2)').css({backgroundColor: 'yellow'});
 
+				$('#t5 td:nth-col(2)').css({backgroundColor: 'yellow'});
 
-				//$('#t4 th:nth-col(2)');
-				//console.log($('#t3 tr th:nth-child(2n+1)'));
-				//$('#t4 th:nth-child(2)').css({backgroundColor: 'pink'});
-				//$('table th:nth-col(2)').css({backgroundColor: 'pink'});
+				$('#t6 td:nth-col(1)').css({backgroundColor: 'yellow'});
 			});
 	-->
 		</script>
@@ -195,6 +185,9 @@
 			</tbody>
 		</table>
 
+
+		<p></p>
+
 		<table id="t5" border="1">
 			<tr>
 				<td></td>
@@ -205,6 +198,8 @@
 				<td></td>
 			</tr>
 		</table>
+
+		<p></p>
 
 		<table id="t6" border="1">
 			<td></td>
