Split jLayout main file into seperate layout manager files so optional layout managers are no longer included by default.

--- a/src/jlayout-borderlayout-resize.html
+++ b/src/jlayout-borderlayout-resize.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript" src="../lib/jquery-ui-1.7.1.custom.min.js"></script>
 		<script type="text/javascript" src="../lib/jquery.metadata.js"></script>
 		<script type="text/javascript" src="jsizes/jquery.sizes.js"></script>
-		<script type="text/javascript" src="jlayout/jlayout.js"></script>
+		<script type="text/javascript" src="jlayout/jlayout.border.js"></script>
 		<script type="text/javascript" src="jlayout/jquery.jlayout.js"></script>
 		<script type="text/javascript">
 			jQuery(function($)
