--- a/src/jlayout-examples.html
+++ b/src/jlayout-examples.html
@@ -7,7 +7,9 @@
 		<script type="text/javascript" src="../lib/jquery-1.3.2.js"></script>
 		<script type="text/javascript" src="../lib/jquery.metadata.js"></script>
 		<script type="text/javascript" src="jsizes/jquery.sizes.js"></script>
-		<script type="text/javascript" src="jlayout/jlayout.js"></script>
+		<script type="text/javascript" src="jlayout/jlayout.border.js"></script>
+		<script type="text/javascript" src="jlayout/jlayout.grid.js"></script>
+		<script type="text/javascript" src="jlayout/jlayout.flexgrid.js"></script>
 		<script type="text/javascript" src="jlayout/jquery.jlayout.js"></script>
 		<script type="text/javascript">
 			jQuery(function($)
