Updated jLayout references in chart code.

--- a/src/chart.xhtml
+++ b/src/chart.xhtml
@@ -10,7 +10,8 @@
 		<script type="text/javascript" src="core/fun.js"></script>
 		<script type="text/javascript" src="core/property.js"></script>
 		<script type="text/javascript" src="core/math.js"></script>
-		<script type="text/javascript" src="jlayout/jlayout.js"></script>
+		<script type="text/javascript" src="jlayout/jlayout.border.js"></script>
+		<script type="text/javascript" src="jlayout/jlayout.grid.js"></script>
 		<script type="text/javascript" src="chart/defaults.js"></script>
 		<script type="text/javascript" src="chart/properties.js"></script>
 		<script type="text/javascript" src="chart/data.js"></script>
