Cleaned up resizable border layout example and added link back to jLayout project site.

--- a/src/jlayout-borderlayout-resize.html
+++ b/src/jlayout-borderlayout-resize.html
@@ -73,9 +73,10 @@
 		</style>
 	</head>
 	<body>
-		<div class="layout {layout: {type: 'border', hgap: 0, vgap: 0}}">
+		<div class="layout {layout: {type: 'border', hgap: 3, vgap: 3}}">
 			<div class="center">
 				Center
+				<h1><a href="http://www.bramstein.com/projects/jlayout/">jLayout project homepage</a></h1>
 			</div>
 			<div class="east">
 				East
