--- a/src/table/column-selectors.html
+++ b/src/table/column-selectors.html
@@ -4,7 +4,7 @@
 		<title>Column selector example</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<script type="text/javascript" src="../lib/jquery-1.3.2.js"></script>
-		<script type="text/javascript" src="table/jquery.column.js"></script>
+		<script type="text/javascript" src="jquery.column.js"></script>
 		<script type="text/javascript">
 		<!--
 			$(document).ready(function () {
