Enabled default Canvas text API instead of custom mozilla one (now that 3.5 has been released.)

--- a/src/chart.xhtml
+++ b/src/chart.xhtml
@@ -20,7 +20,8 @@
 		<script type="text/javascript" src="chart/axis.js"></script>
 		<script type="text/javascript" src="chart/font.js"></script>
 		<script type="text/javascript" src="chart/graphics.js"></script>
-		<script type="text/javascript" src="chart/text.mozilla.js"></script>
+	<!--	<script type="text/javascript" src="chart/text.mozilla.js"></script>-->
+		<script type="text/javascript" src="chart/text.canvas.js"></script>
 		<script type="text/javascript" src="chart/chart.js"></script>
 		<script type="text/javascript" src="chart/composite-chart.js"></script>
 		<script type="text/javascript" src="chart/canvas.js"></script>
