Changed the chart examples to HTML5 instead of XHTML. HTML5 declared winner.

--- a/src/chart-plot.html
+++ b/src/chart-plot.html
@@ -1,9 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
-  PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<script type="text/javascript" src="core/object.js"></script>
 		<script type="text/javascript" src="core/array.js"></script>
 		<script type="text/javascript" src="core/function.js"></script>
@@ -34,8 +32,6 @@
 		<script type="text/javascript" src="chart/chart.histogram.js"></script>
 
 		<script type="text/javascript">
-		<![CDATA[
-		
 			function sine(x, y) {
 				return Interval.add(Interval.sin(x), y)
 			}
@@ -96,7 +92,6 @@
 				sinewave();
 				polarrose();
 			}
-		]]>
 		</script>
 		<style>
 			html {
