--- a/src/chart.html
+++ b/src/chart.html
@@ -1,9 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
-  PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<script type="text/javascript" src="core/object.js"></script>
 		<script type="text/javascript" src="core/array.js"></script>
 		<script type="text/javascript" src="core/function.js"></script>
@@ -35,7 +33,6 @@
 		<script type="text/javascript" src="chart/chart.histogram.js"></script>
 
 		<script type="text/javascript">
-		<![CDATA[
 			function anscombe() {
 				var d = {
 					categories: ['Set 1', 'Set 2', 'Set 3', 'Set 4'],
@@ -245,7 +242,6 @@
 				line();
 				histogram();
 			}
-		]]>
 		</script>
 		<style>
 			html {
