Updated example file inclusions.

--- a/src/chart/plot.html
+++ b/src/chart/plot.html
@@ -2,34 +2,34 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<script type="text/javascript" src="core/object.js"></script>
-		<script type="text/javascript" src="core/array.js"></script>
-		<script type="text/javascript" src="core/function.js"></script>
-		<script type="text/javascript" src="core/fun.js"></script>
-		<script type="text/javascript" src="core/property.js"></script>
-		<script type="text/javascript" src="core/math.js"></script>
-		<script type="text/javascript" src="jlayout/jlayout.border.js"></script>
-		<script type="text/javascript" src="jlayout/jlayout.grid.js"></script>
-		<script type="text/javascript" src="chart/font_new.js"></script>
-		<script type="text/javascript" src="chart/defaults.js"></script>
-		<script type="text/javascript" src="chart/properties.js"></script>
-		<script type="text/javascript" src="chart/data.js"></script>
-		<script type="text/javascript" src="core/interval.js"></script>
-		<script type="text/javascript" src="chart/coordinate.js"></script>
-		<script type="text/javascript" src="chart/axis.js"></script>
-		<script type="text/javascript" src="chart/font.js"></script>
-		<script type="text/javascript" src="chart/graphics.js"></script>
-		<script type="text/javascript" src="chart/text.canvas.js"></script>
-		<script type="text/javascript" src="chart/chart.js"></script>
-		<script type="text/javascript" src="chart/composite-chart.js"></script>
-		<script type="text/javascript" src="chart/canvas.js"></script>
-		<script type="text/javascript" src="chart/title.js"></script>
-		<script type="text/javascript" src="chart/legend.js"></script>
-		<script type="text/javascript" src="chart/chart.scatter.js"></script>
-		<script type="text/javascript" src="chart/chart.bar.js"></script>
-		<script type="text/javascript" src="chart/chart.line.js"></script>
-		<script type="text/javascript" src="chart/chart.plot.js"></script>
-		<script type="text/javascript" src="chart/chart.histogram.js"></script>
+		<script type="text/javascript" src="../core/object.js"></script>
+		<script type="text/javascript" src="../core/array.js"></script>
+		<script type="text/javascript" src="../core/function.js"></script>
+		<script type="text/javascript" src="../core/fun.js"></script>
+		<script type="text/javascript" src="../core/property.js"></script>
+		<script type="text/javascript" src="../core/math.js"></script>
+		<script type="text/javascript" src="../jlayout/jlayout.border.js"></script>
+		<script type="text/javascript" src="../jlayout/jlayout.grid.js"></script>
+		<script type="text/javascript" src="font_new.js"></script>
+		<script type="text/javascript" src="defaults.js"></script>
+		<script type="text/javascript" src="properties.js"></script>
+		<script type="text/javascript" src="data.js"></script>
+		<script type="text/javascript" src="../core/interval.js"></script>
+		<script type="text/javascript" src="coordinate.js"></script>
+		<script type="text/javascript" src="axis.js"></script>
+		<script type="text/javascript" src="font.js"></script>
+		<script type="text/javascript" src="graphics.js"></script>
+		<script type="text/javascript" src="text.canvas.js"></script>
+		<script type="text/javascript" src="chart.js"></script>
+		<script type="text/javascript" src="composite-chart.js"></script>
+		<script type="text/javascript" src="canvas.js"></script>
+		<script type="text/javascript" src="title.js"></script>
+		<script type="text/javascript" src="legend.js"></script>
+		<script type="text/javascript" src="chart.scatter.js"></script>
+		<script type="text/javascript" src="chart.bar.js"></script>
+		<script type="text/javascript" src="chart.line.js"></script>
+		<script type="text/javascript" src="chart.plot.js"></script>
+		<script type="text/javascript" src="chart.histogram.js"></script>
 
 		<script type="text/javascript">
 			function sine(x, y) {
